Bug 323914 - Typos in the installer
Summary: Typos in the installer
Status: RESOLVED FIXED
Alias: None
Product: kde-windows
Classification: Unmaintained
Component: other (other bugs)
Version First Reported In: 4.10
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KDE-Windows
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-23 09:32 UTC by despatche
Modified: 2014-01-09 09:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description despatche 2013-08-23 09:32:54 UTC
hey there! not sure if this is the right place... installed kde-baseapps and noticed a few typos with the installer, thought i'd say something. i didn't see anything in the apps themselves.

Installer, Release Selection:
1. "Select the release you like to install or update from."
2. "Select the release you would like to install or update from."

Installer, Installation/Update Finished:
1. "In the start menu you will find entries for the installed kde applications."
2. "In the Start menu you will find entries for the installed KDE applications."

1. "If you"
2. "If you would:"

1. "This software is designed to provide a powerfull and flexible network based install system using a modern gui toolkit.
2. "This software is designed to provide a powerful and flexible network-based install system using a modern GUI toolkit.

Start menu shortcuts:
1. "KDE  Release"
2. "KDE Release"

Reproducible: Always
Comment 1 utf8snowman 2013-12-03 10:03:16 UTC
Yep, can confirm, I see the typos too.
Comment 2 Ralf Habacker 2014-01-09 08:32:00 UTC
> Start menu shortcuts: 
> 1. "KDE  Release" 
> 2. "KDE Release" 

The additional space comes from version placeholder and need to be fixed in the kwinstartmenu command line tool
Comment 3 Ralf Habacker 2014-01-09 08:34:05 UTC
Git commit e2ca1bf099a582874a833829828c4a208bb268fe by Ralf Habacker.
Committed on 09/01/2014 at 08:27.
Pushed by habacker into branch 'master'.

Fix typos

M  +3    -3    gui/finishpage.cpp

http://commits.kde.org/kdewin-installer/e2ca1bf099a582874a833829828c4a208bb268fe
Comment 4 Ralf Habacker 2014-01-09 09:15:13 UTC
Git commit 8ad8b96fda4ac0a87ae53589bcc8feef5461cb9e by Ralf Habacker.
Committed on 09/01/2014 at 09:14.
Pushed by habacker into branch 'KDE/4.12'.

Avoid double spaces in Windows root start menu entry when no KDE version is provided.

M  +2    -1    platforms/win/kwinstartmenu/misc.cpp

http://commits.kde.org/kde-runtime/8ad8b96fda4ac0a87ae53589bcc8feef5461cb9e