Fix typos

BUG: 323914